--- a/WebSite/StaticContent/app/scss/components/selectableList.scss
+++ b/WebSite/StaticContent/app/scss/components/selectableList.scss
@@ -12,6 +12,7 @@
         background-color: #e0e0e0;
         border-radius: 10px;
         font-size: 24px;
+        margin-bottom: 1px;
 
         /* No selection after double click */
         -webkit-user-select: none; /* webkit (safari, chrome) browsers */
@@ -25,6 +26,7 @@
             border-radius: 10px;
             word-wrap: break-word;
             cursor: pointer;
+            border: 1px #d8d0d0 solid;
 
             .selectable-list-item-value {
                 flex-grow: 5;
@@ -39,6 +41,12 @@
                 justify-content: flex-end;
                 font-style: italic;
                 margin-right: 8px;
+            }
+
+            &.green-list-item {
+                background-color: #3c763d;
+                color: white;
+                border-color: #0b4401;
             }
 
             &.active-list-item {
