--- a/WebSite/StaticContent/app/templates/components/irregularVerbs.html
+++ b/WebSite/StaticContent/app/templates/components/irregularVerbs.html
@@ -1,5 +1,5 @@
 <div>
-    <table class="table table-striped">
+    <table class="tew-table tew-table-striped">
         <thead class="header">
             <tr>
                 <th>Infinitive</th>
