--- a/WebSite/StaticContent/app/templates/helpComponents/loadingLockDisplay.html
+++ b/WebSite/StaticContent/app/templates/helpComponents/loadingLockDisplay.html
@@ -1,6 +1,8 @@
-<div class="loading-lock-overlay">
-    <div class="loading-lock-message">
-        <i class="fa fa-hourglass-o fa-spin" aria-hidden="true"></i>
-        <span>Loading...</span>
+<div class="loading-lock">
+    <div class="loading-lock-overlay">
+        <div class="loading-lock-message">
+            <i class="fa fa-hourglass-o fa-spin" aria-hidden="true"></i>
+            <span>Loading...</span>
+        </div>
     </div>
 </div>
