--- a/WebSite/StaticContent/app/templates/components/writeTest.html
+++ b/WebSite/StaticContent/app/templates/components/writeTest.html
@@ -25,7 +25,8 @@
                         <i class="fa fa-check" aria-hidden="true"></i>
                 </button>
 
-                <button [disabled]="isHelpUsed"
+                <button *ngIf="currentTestModel.Word"
+                    [disabled]="isHelpUsed"
                     (click)="useHelp()"
                     class="button button-orange tew-test-control">
                         <i class="fa fa-question" aria-hidden="true"></i>
