--- a/WebSite/StaticContent/app/templates/components/app.html
+++ b/WebSite/StaticContent/app/templates/components/app.html
@@ -2,7 +2,7 @@
     <modal-window *ngIf="isModalOpen" [windowConfig]="modalConfig"></modal-window>
     <toolbar [Logout]="logOut" [UserName]="userName">
     </toolbar>
-    <div class="tew-body container">
+    <div class="tew-body">
         <div [style.visibility]="showLoadingArr.length > 0 ? 'visible' : 'hidden'">
             <loading-animation></loading-animation>
         </div>
