--- a/WebSite/StaticContent/app/templates/components/myWords.html
+++ b/WebSite/StaticContent/app/templates/components/myWords.html
@@ -46,7 +46,7 @@
                     <i class="fa fa-times fa-lg cursor-pointer" aria-hidden="true" (click)="askRemoveWord(word)"></i>
                 </td>
                 <td (click)="editWord(word)">
-                    <a href="javascript:;">{{word.English}}</a>
+                    <a class="link" href="javascript:;">{{word.English}}</a>
                 </td>
                 <td>{{word.Russian}}</td>
                 <td>{{word.Level}}</td>
