--- a/WebSite/Views/Shared/_TewLayout.cshtml
+++ b/WebSite/Views/Shared/_TewLayout.cshtml
@@ -6,11 +6,10 @@
         <meta charset="utf-8" />
         <title>Tew</title>
 
-        @Styles.Render("~/Content/css")
-        @Styles.Render("~/Content/tew")
+        @Styles.Render("~/Content/tewLayout")
+        @Styles.Render("~/Content/awesome")
         @Scripts.Render("~/bundles/modernizr")
         @Scripts.Render("~/bundles/jquery")
-        @Scripts.Render("~/bundles/bootstrap")
         @Scripts.Render("~/bundles/angular2")
 
         @RenderSection("scripts", required: false)
