--- a/WebSite/StaticContent/app/scss/components/tewTest.scss
+++ b/WebSite/StaticContent/app/scss/components/tewTest.scss
@@ -24,6 +24,7 @@
     .tew-test-word {
         font-size: 40px;
         font-weight: bold;
+        margin-bottom: 8px;
     }
 
     .tew-test-example {
