--- a/WebSite/StaticContent/app/templates/helpComponents/modalWindow.html
+++ b/WebSite/StaticContent/app/templates/helpComponents/modalWindow.html
@@ -1,10 +1,10 @@
 <div class="modal-window">
     <div class="modal-container">
         <div class="modal-container__header">
-            <button class="close" (click)="closeWindow()">
-                <i class="fa fa-close"></i>
-            </button>
             <div class="modal-container__header-title">{{config.HeaderText}}</div>
+            <a class="modal-container__header-close" (click)="closeWindow()">
+                <i class="fa fa-close"></i>
+            </a>
         </div>
         <div class="modal-container__body">
             <p *ngIf="!config.InnerComponent">{{config.BodyText}}</p>
