--- a/WebSite/Views/Shared/_WebAppLayout.cshtml
+++ b/WebSite/Views/Shared/_WebAppLayout.cshtml
@@ -6,6 +6,9 @@
         <meta charset="utf-8" />
         <title>Tew</title>
 
+        @Styles.Render("~/Content/awesome")
+        @Styles.Render("~/Content/bootstrap")
+        @Styles.Render("~/Content/tewLayout")
         @Styles.Render("~/Content/css")
         @Scripts.Render("~/bundles/modernizr")
         @Scripts.Render("~/bundles/jquery")
